[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
near-contract-standards = "5.1.0"
near-sdk = { version = "5.1.0", default-features = false, features = [
  "unstable",
  "unit-testing"
] }
primitive-types = { version = "0.12", default-features = false }
fake = { version = "2.9.2", features = ["derive"] }
futures = "0.3.30"
near-workspaces = { version = "0.10.0", features = ["unstable"] }
owo-colors = "4"
rand = "0.8.5"
serde_json = "1"
tokio = { version = "1.12.0", features = ["full"] }

[profile]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.test.package."*"]
codegen-units = 1
opt-level = 1