[package]
name = "contract-test"
version = "1.0.0"
authors = ["pysr <gm@pysr.xyz>", "Mario Reder <mario.reder@pm.me>"]
edition = "2024"

[dev-dependencies]
rewarder = { path = "../rewarder" }
fake.workspace = true
rand.workspace = true
owo-colors.workspace = true
anyhow.workspace = true
futures.workspace = true
near-contract-standards.workspace = true
near-sdk.workspace = true
near-workspaces.workspace = true
tokio.workspace = true
serde_json.workspace = true

# fake = { version = "2.9.2", features = ["derive"] }
# futures = "0.3.30"
# near-sdk = { version = "5.1.0", features = ["unit-testing"] }
# near-workspaces = { version = "0.10.0", features = ["unstable"] }
# owo-colors = "4"
# rand = "0.8.5"
# serde_json = "1"
# tokio = { version = "1.12.0", features = ["full"] }